# Autonomous-Racing-Car

./: .gitignore  README.md
Autonomous-RacingCar/: ay_7aga.csv  frames.gv  output.csv
Autonomous-RacingCar/devel/: _setup_util.py
Autonomous-RacingCar/devel/include/aam_common_msgs/: BoundingBox.h  BoundingBoxes.h  CarState.h  CarStateDt.h  Cone.h  ConeDetections.h  ControlCommand.h  Map.h  Mission.h
Autonomous-RacingCar/devel/include/ma_rrt_path_plan/: Map.h  Waypoint.h  WaypointsArray.h
Autonomous-RacingCar/devel/lib/lidar_cone_detection/: lidar_cone_detection
Autonomous-RacingCar/devel/lib/pkgconfig/: AAM_CONTROL.pc  LAUNCH.pc  aam_common_msgs.pc  aamfsd_gazebo.pc  camera_cone_detection.pc  detection_msgs.pc  lidar_cone_detection.pc  ma_rrt_path_plan.pc
Autonomous-RacingCar/src/AAM_CONTROL/: CMakeLists.txt  package.xml
Autonomous-RacingCar/src/AAM_CONTROL/src/: AI2LOG.py  AI2VCU_sub.py  Static_inspection_A.py  Static_inspection_B.py  VCU2AI_sub.py  ai2vcu_publisher.py  can_receiver.py  pid_code.py  purepursuit.py  stanelyCK.py  velocity2torqu.py
Autonomous-RacingCar/src/AAM_LOCALIZTION/: CMakeLists.txt  package.xml
Autonomous-RacingCar/src/AAM_LOCALIZTION/launch/: localization.launch
Autonomous-RacingCar/src/AAM_LOCALIZTION/src/: fastslamwithekf.py
Autonomous-RacingCar/src/AAM_PATH_PLANNING/: CMakeLists.txt  package.xml
Autonomous-RacingCar/src/AAM_PATH_PLANNING/launch/: accpathplanning.launch  trackpathplanning.launch
Autonomous-RacingCar/src/AAM_PATH_PLANNING/src/: newMidMarch2.py
Autonomous-RacingCar/src/AAM_PERCEPTION/: cv_dependencies.md
Autonomous-RacingCar/src/AAM_PERCEPTION/camera_cone_detection/: CMakeLists.txt
Autonomous-RacingCar/src/AAM_PERCEPTION/camera_cone_detection/launch/: cameranewapproach.launch  cameranewapproach_rl.launch
Autonomous-RacingCar/src/AAM_PERCEPTION/camera_cone_detection/rviz/: rviz_config.rviz
Autonomous-RacingCar/src/AAM_PERCEPTION/camera_cone_detection/src/: ay_7aga.csv  clustering.py  clustering_rl.py  ekf_slam_with_SE.py  graph_slam_v2.0.py  hsvfiltering.py  hsvfiltering_rl.py  hsvoutremoved.py  imu_test.py  markerconversion.py  markerconversion_rl.py  oldapproach.py  trynewdetec.py  velocity_est_2_imu_accFunc_gssGroundTruth.py
Autonomous-RacingCar/src/AAM_PERCEPTION/lidar_cone_detection/: CMakeLists.txt
Autonomous-RacingCar/src/AAM_PERCEPTION/new_loc/: CMakeLists.txt  package.xml
Autonomous-RacingCar/src/AAM_STATE_ESTIMATION/: CMakeLists.txt  package.xml
Autonomous-RacingCar/src/AAM_STATE_ESTIMATION/launch/: stateestimation.launch
Autonomous-RacingCar/src/AAM_STATE_ESTIMATION/src/: velocity_est_2_imu_accFunc_gssGroundTruth.py
Autonomous-RacingCar/src/LAUNCH/: CMakeLists.txt
Autonomous-RacingCar/src/LAUNCH/launch/: acceleration_drive.launch  track_drive.launch
Autonomous-RacingCar/src/LAUNCH/src/: delay_launch.py  launch_acc.py  launch_track.py
Autonomous-RacingCar/src/PLUGINS/: CMakeLists.txt
Autonomous-RacingCar/src/PLUGINS/src/: ami2.py
Autonomous-RacingCar/src/aam_cars/aamfsd_description/: package.xml
Autonomous-RacingCar/src/aam_cars/aamfsd_gazebo/: package.xml
Autonomous-RacingCar/src/aam_common/aam_common_msgs/: CMakeLists.txt  package.xml
Autonomous-RacingCar/src/aam_common/aam_common_msgs/msg/: CarState.msg  Cone.msg  ConeDetections.msg  Map.msg
Autonomous-RacingCar/src/aam_common/aam_common_sim/: CMakeLists.txt  package.xml
Autonomous-RacingCar/src/ma_rrt_path_plan/: CMakeLists.txt
Autonomous-RacingCar/src/ma_rrt_path_plan/launch/: trackpathplanning.launch
Autonomous-RacingCar/src/ma_rrt_path_plan/msg/: Map.msg  WaypointsArray.msg
Autonomous-RacingCar/src/ma_rrt_path_plan/src/: MaRRTPathPlanNode.py  cone_map_adapter.py  ma_rrt.py  main.py
Autonomous-RacingCar/src/ma_rrt_path_plan/src/inc/: ma_rrt.py
Autonomous-RacingCar/src/mpc_control/: CMakeLists.txt  package.xml
Autonomous-RacingCar/src/mpc_control/include/mpc_control/: FG_eval.h
Autonomous-RacingCar/src/mpc_control/src/: mpc_node.cpp
devel/: .catkin
devel/lib/lidar_cone_detection/: lidar_cone_centroid.py
devel/lib/mpc_control/: mpc_node
devel/lib/pkgconfig/: AAM_LOCALIZTION.pc  AAM_PATH_PLANNING.pc  AAM_STATE_ESTIMATION.pc  PLUGINS.pc  aam_common_sim.pc  aamfsd_description.pc  mpc_control.pc  new_loc.pc  robot_control.pc  yolov5_ros.pc
devel/lib/robot_control/: robot_control_node
devel/lib/yolov5_ros/: detect.py
devel/share/AAM_CONTROL/cmake/: AAM_CONTROLConfig.cmake
devel/share/AAM_PATH_PLANNING/cmake/: AAM_PATH_PLANNINGConfig.cmake
devel/share/LAUNCH/cmake/: LAUNCHConfig.cmake
src/AAM_CONTROL/launch/: acccontrol.launch  trackcontrol.launch
src/AAM_CONTROL/src/: mpc_controller_acceleration.py  mpc_controller_osqp.py  new_paper.py
src/AAM_LOCALIZATION/: CMakeLists.txt  package.xml
src/AAM_LOCALIZATION/launch/: localization.launch
src/AAM_LOCALIZATION/rviz/: slam.rviz
src/AAM_LOCALIZATION/src/: slam.rviz
src/AAM_LOCALIZTION/src/: fastslamwithekf.py
src/AAM_STATE_ESTIMATION/src/: velocity_est_2_imu_accFunc_gssGroundTruth.py
src/LAUNCH/launch/: acceleration_drive.launch  track_drive.launch
src/LAUNCH/src/: launch_acc.py  launch_track.py
src/aamfsd_gazebo/launch/: small_track_mpc.launch
src/mpc_control/src/: MPC.cpp
(+180 files in other folders)
